Closed Bug 1524136 Opened 7 years ago Closed 7 years ago

Fix BigInt errors in string conversion and remainder operations

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: terpri, Assigned: terpri)

References

Details

Attachments

(1 file)

Fix several errors in BigInt operations:

  • mod can return non-canonical zeros, leading to later assertion failures during string conversion
  • base 10 string conversion allocates too many characters for cases not handled by Int32ToString
  • on platforms with 32-bit pointers, toUint64 reads past the end of the digit array for single-digit arguments
Assignee: nobody → robin
Blocks: js-bigint
Keywords: checkin-needed

Pushed by nerli@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e152c36c1841
Fix BigInt errors in string conversion and remainder operations r=jwalden

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: